--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,4 +18,4 @@ jobs:
             username: ${{ secrets.ftp_user }}
             password: ${{ secrets.ftp_password }}
             port: 21
-            server-dir: /hellbrass.com.br
+            server-dir: /hellbrass.com.br/
