--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,13 +9,16 @@ jobs:
       runs-on: ubuntu-latest
       steps:
         - name: 🚚 Get latest code
-          uses: actions/checkout@v2
+          uses: actions/checkout@v3
   
         - name: 📂 Sync files
-          uses: SamKirkland/FTP-Deploy-Action@4.0.0
+          uses: SamKirkland/FTP-Deploy-Action@v4.3.4
           with:
             server: ${{ secrets.ftp_host }}
             username: ${{ secrets.ftp_user }}
             password: ${{ secrets.ftp_password }}
             port: 21
             server-dir: /hellbrass.com.br/
+
+  #https://github.com/marketplace/actions/ftp-deploy
+  #https://www.youtube.com/watch?v=3cLbh-k2qKk
